src/objects/CKW_Cluster_Meeting__c.object
<CustomObject>
    <fields>
        <fullName>Any_Banana_GAPS_discussed__c</fullName>
        <label>Any Banana GAPS discussed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_Coffee_GAPS_discussed__c</fullName>
        <label>Any Coffee GAPS discussed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Any_Maize_GAPS_discussed__c</fullName>
        <label>Any Maize GAPS discussed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Banana_GAPS_discussed__c</fullName>
        <label>Banana GAPS discussed</label>
        <picklist>
            <picklistValues>
                <fullName>Soil fertility management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pruning desuckering etc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soil and water conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support for banana plants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proper record keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group production and marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proper and timely weed control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana pests and disease control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banana value addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Easily access agro-inputs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CKW_Full_Name__c</fullName>
        <label>CKW Full Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CKW__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CKW</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>3.0 CKW Cluster Meetings (Contact)</relationshipLabel>
        <relationshipName>X3_0_CKW_Cluster_Meetings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coffee_GAPS_discussed__c</fullName>
        <label>Coffee GAPS discussed</label>
        <picklist>
            <picklistValues>
                <fullName>Soil fertility management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desuckering pruning and stumping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soil and water conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On farm coffee value addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proper farm record keeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group production/ marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proper and timely weed control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee pests and disease control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Easily access agro-inputs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FO__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>FO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>3.0 CKW Cluster Meetings</relationshipLabel>
        <relationshipName>X3_0_CKW_Cluster_Meetings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maize_GAPS_discussed__c</fullName>
        <label>Maize GAPS discussed</label>
        <picklist>
            <picklistValues>
                <fullName>Proper and timely land prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proper planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proper seed selection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proper soil fertility management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pest and disease identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvesting and Post harvest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulking marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proper record keeping</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Market_information_discussed__c</fullName>
        <label>Market information discussed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_date__c</fullName>
        <label>Meeting date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weather_information_discussed__c</fullName>
        <label>Weather information discussed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>3.0 CKW Cluster Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CCM{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>CKW Cluster Meeting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>3.0 CKW Cluster Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>